Fix alignment.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2876,7 +2876,7 @@
 		background: url("images/overlay.png"), url("../../images/dogv2.jpg");
 		background-size: 256px 256px, cover;;
 		background-attachment: fixed, fixed;
-		background-position: top left, top center;
+		background-position: top left, top right;
 		background-repeat: repeat, no-repeat;
 	}
 
